Changed path for running tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,5 +38,5 @@ jobs:
         working-directory: ${{github.workspace}}/build
 
       - name: Run tests
-        run: ../testapp
+        run: pwd && ../testapp
         working-directory: ${{github.workspace}}/build
