--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,24 +1,33 @@
 cmake_minimum_required(VERSION 3.16)  # Minimum CMake version required
 project(lox-interpreter-cpp)                   # Name of the project
 
-include_directories(include, src, test, include/lox)
+include_directories(include)
+include_directories(src)
+include_directories(test)
 
 file(GLOB SOURCES
-    "src/*.cpp"
+    src/Lox.cpp
+    src/Parser.cpp
+    src/Scanner.cpp
+    src/Token.cpp
 )
 
 file(GLOB TEST_SOURCES
-    "test/*.cpp"
+    test/Parser.test.cpp 
+    test/Scanner.test.cpp
 )
 
 # Create the main executable
-add_executable(app 
+add_executable(app
     ${SOURCES}
+    src/main.cpp
 )
 
 # Create the test executable
-add_executable(testapp 
-    ${TEST_SOURCES} ${SOURCES}
+add_executable(testapp
+    ${SOURCES}
+    ${TEST_SOURCES}
+    test/main.test.cpp
 )
 
 enable_testing()
