--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,10 @@
 cmake_minimum_required(VERSION 3.16)  # Minimum CMake version required
 project(lox-interpreter-cpp)                   # Name of the project
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
+
 include_directories(include)
 include_directories(src)
 include_directories(test)
